--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -1,5 +1,7 @@
 %nav.navbar.navbar-fixed-top.navbar-inverse
   .container
+    .navbar-header.navbar-brand
+      Блоги
     #navbar.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li=link_to 'Пользователи', users_path
