--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -9,5 +9,8 @@
   .form-group
     = f.label :password
     = f.password_field :password, class: 'form-control'
+  .form-group
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation, class: 'form-control'    
   .actions
     = f.submit nil, class: 'btn btn-primary'
