--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -5,3 +5,10 @@
     #navbar.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li=link_to 'Пользователи', users_path
+      %ul.nav.navbar-nav.navbar-right
+        -if @current_user
+          %li
+            %p.navbar-text=@current_user.name
+          %li=link_to 'Выход', logout_path
+        -else
+          %li=link_to 'Вход', login_path
