--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,6 @@
     = csrf_meta_tags
   %body
     =render 'navbar'
-    .container= yield
+    .container
+      =render 'flash_messages'
+      = yield
