--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,7 +1,4 @@
-%h1 Editing post
+.page-header
+  %h1 Редактирование записи
 
 = render 'form'
-
-= link_to 'Show', @post
-\|
-= link_to 'Back', posts_path
