--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 .page-header
   %h1=@user.name
--if @user.post_editor?(@current_user)
+-if Post.create_by?(@user, @current_user)
   .btn-toolbar
     =link_to "Добавить запись", new_post_path(user_id: @user.id), class: 'btn btn-primary'
 -if @posts.blank?
