--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -12,3 +12,4 @@
           %li=link_to 'Выход', logout_path
         -else
           %li=link_to 'Вход', login_path
+          %li=link_to 'Регистрация', new_user_path
