--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -1,9 +1,11 @@
 %nav.navbar.navbar-fixed-top.navbar-inverse
   .container
     .navbar-header
-      .navbar-brand Блоги
+      =link_to 'Блоги', root_path, class: 'navbar-brand'
     #navbar.collapse.navbar-collapse
       %ul.nav.navbar-nav
+        -if @current_user
+          %li=link_to 'Мой блог', @current_user
         %li=link_to 'Пользователи', users_path
       %ul.nav.navbar-nav.navbar-right
         -if @current_user
