--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing user
-
+%h1 Редактирование пользователя
+.pull-right
+  =link_to @user, class: 'btn btn-danger', data: {method: :delete, confirm: 'Вы уверены?'} do
+    %span.glyphicon.glyphicon-trash
+    Удалить
+.clearfix    
 = render 'form'
-
-= link_to 'Show', @user
-\|
-= link_to 'Back', users_path
