--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,12 @@
 .page-header
-  %h1=@user.name
+  %h1
+    =@user.name
+    -if @user.edit_by?(@current_user)
+      .pull-right
+        =link_to edit_user_path(@user) do
+          %span.glyphicon.glyphicon-edit
+      .clearfix    
+
 -if Post.create_by?(@user, @current_user)
   .btn-toolbar
     =link_to "Добавить запись", new_post_path(user_id: @user.id), class: 'btn btn-primary'
@@ -8,4 +15,4 @@
 -else
   -@posts.each do |post|
     =render 'posts/post', post: post
-  =paginate @posts  
+  =paginate @posts
