--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,3 +1,4 @@
+
 = form_for @post do |f|
   =hidden_field_tag :user_id, @post.user_id
   =error_messages_for(@post)
@@ -7,5 +8,12 @@
   .form-group
     = f.label :body
     = f.text_area :body, class: 'form-control'
+  .form-group
+    =f.label :files
+    %ol
+      -@post.attachments.each do |attachment|
+        %li=link_to show_attachment(attachment), attachment.image.url
+
+    =f.file_field :files, multiple: true
   .actions
     = f.submit nil, class: 'btn btn-primary'
